# Autonomous-Microscope-Robot

./: GUIDataColor.py  GUIDataMono.py  README.md
InitialCodes/: GUIDataColor.py  GUIDataMono.py  OnlyLiveView.py
odrive_cam_logger/: package.xml  setup.cfg  setup.py
odrive_cam_logger/launch/: app.launch.py
odrive_cam_logger/odrive_cam_logger/: camera_node.py  gui_node.py  logger_node.py  odrive_driver_node.py  ros_interfaces.py
ump_suite/ump_suite/: camera_node.py  gui_node.py  odrive_driver_node.py  ump_driver_node.py
