<?xml version="1.0"?>
<?xml-model href="http://download.ros.org" schematypens="http://www.w3.org"?>
<package format="3">
  <name>odrive_cam_logger</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="raianhaiderchowdhury@gmail.com">raianbsbrl</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>